--- a/style2.css
+++ b/style2.css
@@ -45,9 +45,9 @@ nav span {
 #mission {
   display: flex;
   background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg");
-  align-items: center
+  align-items: center;
   justify-content: center;
-  margin: 0 auto;
+  margin: auto;
   height: 700px;
   width: 1200px;
 }
